--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "prettier": "^3.3.2",
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
+    "ts-proto": "^2.5.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   },
