--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "generate-proto": "protoc -I=./protos recognition.proto --js_out=import_style=commonjs:./src/grpc --grpc-web_out=import_style=commonjs,mode=grpcwebtext:./src/grpc"
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.15.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
+    "@types/recorder-js": "^1.0.4",
+    "@types/recordrtc": "^5.6.14",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "dotenv": "^16.4.5",
     "eslint-plugin-prettier": "^5.1.3",
@@ -39,9 +42,13 @@
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "recorder-js": "^1.0.7",
+    "recordrtc": "^5.6.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.12",
