--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "wavefile": "^11.0.0"
+    "wavefile": "^11.0.0",
+    "web-audio-resampler": "^1.0.4"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.12",
