--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pizza-shift-2024",
+  "name": "voice-recognition",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.15.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@reduxjs/toolkit": "^2.2.7",
